# MangoEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  imgui.ini
Source/: Applicaiton.cpp  Application.h  Main.cpp  main.cpp
Source/Core/: GUID.cpp  GUID.h  GameObject.cpp  GameObject.h  GeometryType.h  Input.cpp  Input.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SceneSerializer.cpp  SceneSerializer.h
Source/Core/Components/: CameraComponent.h  ColorComponent.h  Components.h  GeometryComponent.h  IdComponent.h  NameComponent.cpp  NameComponent.h  RigidbodyComponent.cpp  RigidbodyComponent.h  ScriptComponent.cpp  ScriptComponent.h  TransformComponent.h
Source/Core/Scripting/: ScripingLibrary.h  ScriptEngine.cpp  ScriptEngine.h  ScriptingLibrary.cpp
Source/GUI/: Editor.cpp  Editor.h
Source/IO/: FileReader.cpp
Source/ImGui/: ImGuiEditor.cpp  ImGuiEditor.h
Source/Infrastructure/Assert/: Assert.h
Source/Infrastructure/IO/: FileDialog.h  FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h
Source/Infrastructure/Logging/: Logging.h
Source/Platform/ImGui/: ImGuiEditorViewport_ImplVulkan.cpp  ImGuiEditorViewport_ImplVulkan.h  ImGuiEditor_ImplGLFWVulkan.cpp  ImGuiEditor_ImplGLFWVulkan.h
Source/Platform/Vulkan/: Buffer.cpp  Buffer.h  CommandBuffer.cpp  CommandBuffer.h  CommandBufferRecorder.h  CommandBuffersPool.cpp  CommandBuffersPool.h  CommandPool.cpp  Context.cpp  Context.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  Fence.cpp  Fence.h  Framebuffer.cpp  FramebuffersPool.cpp  FramebuffersPool.h  GraphicsPipeline.cpp  GraphicsPipeline.h  ICommandBufferRecorder.h  Image.cpp  Image.h  IndexBuffer.cpp  Instance.cpp  LogicalDevice.cpp  PhysicalDevice.cpp  PhysicalDevice.h  RenderArea.h  RenderPass.cpp  RenderPass.h  RenderSurafce_ImplGLFW.h  RenderSurface_ImplGLFW.cpp  RenderSurface_ImplGLFW.h  Renderer_ImplVulkan.cpp  Renderer_ImplVulkan.h  RenderingLayer_ImplVulkan.cpp  RenderingLayer_ImplVulkan.h  Semaphore.cpp  (+12 more)
Source/Platform/Windowing/: GLFWWindow.cpp  GLFWWindow.h
Source/Platform/Windows/: WindowsFileDialog.cpp  WindowsFileDialog.h
Source/Render/: Renderer.h  RenderingLayer.h
Source/Shaders/: shader.vert
Source/Vulkan/: Buffer.cpp  Buffer.h  CommandBuffer.cpp  CommandBuffer.h  CommandBuffers.cpp  CommandBuffers.h  CommandBuffersPool.cpp  CommandBuffersPool.h  CommandPool.cpp  CommandPool.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  EditorViewport.cpp  EditorViewport.h  Fence.cpp  Fence.h  Framebuffer.cpp  Framebuffer.h  Framebuffers.cpp  Framebuffers.h  FramebuffersPool.cpp  FramebuffersPool.h  GraphicsPipeline.cpp  GraphicsPipeline.h  HardwareInfo.h  Image.h  ImageView.cpp  ImageView.h  IndexBuffer.cpp  IndexBuffer.h  Instance.cpp  Instance.h  LogicalDevice.cpp  LogicalDevice.h  PhysicalDevice.cpp  PhysicalDevice.h  QueueFamilyIndices.cpp  QueueFamilyIndices.h  (+22 more)
Source/Windowing/: Window.cpp  Window.h
TestGames/FloppyBirb/: Bird.py  FloppyBirbScene.json  ObstaclesController.py
